add wooden window crafting

--- a/Resources/Prototypes/_CP14/Entities/Structures/Windows/windows.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Windows/windows.yml
@@ -78,3 +78,6 @@
     sprite: _CP14/Structures/Windows/wooden_window.rsi
   - type: Icon
     sprite: _CP14/Structures/Windows/wooden_window.rsi
+  - type: Construction
+    graph: CP14WallWood
+    node: WindowWooden
