--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
@@ -30,13 +30,20 @@
       state: green
     - sprite: _CP14/Mobs/Species/Zombie/parts.rsi
       state: full
-    - type: EntityTableSpawner
-      offset: 0.2
-      table: !type:NestedSelector
-        tableId: GenericZombie
-        prob: 0.5
-  placement:
-    mode: AlignTileAny
+    - type: RandomSpawner
+      rarePrototypes:
+        - CP14MobUndeadZombieGearMedium1
+        - CP14MobUndeadZombieGearMedium2
+        - CP14MobUndeadZombieGearHard1
+        - CP14MobUndeadZombieGearHard2
+      rareChance: 0.2
+      prototypes:
+        - CP14MobUndeadZombie
+        - CP14MobUndeadZombieGearEasy1
+        - CP14MobUndeadZombieGearEasy2
+        - CP14MobUndeadZombieGearEasy3
+      chance: 0.8
+      offset: 0.0
 
 - type: entity
   name: walking dead spawner
