--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/shield.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/shield.yml
@@ -12,7 +12,7 @@
     state: icon
   - type: Item
     sprite: _CP14/Objects/Weapons/Melee/Shield/shield.rsi
-    size: Ginormous
+    size: Normal
   - type: Blocking
     passiveBlockModifier:
       coefficients:
