--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/battleStaff.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/battleStaff.yml
@@ -7,7 +7,10 @@
   description: an extremely simple and effective weapon - a long straight and heavy stick.
   components:
   - type: Item
-    size: Ginormous
+    size: Normal
+    storedRotation: 45
+    shape:
+    - 0,0,0,3
   - type: Sprite
     sprite: _CP14/Objects/Weapons/Melee/BattleStaff/battleStaff.rsi
     layers:
