--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/shield.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/shield.yml
@@ -38,7 +38,7 @@
     quickEquip: false
     breakOnMove: false
     slots:
-    - back
+    - neck
   - type: MeleeWeapon
     angle: 0
     range: 1.2
