--- a/Resources/Prototypes/_CP14/InventoryTemplates/human_inventory_template.yml
+++ b/Resources/Prototypes/_CP14/InventoryTemplates/human_inventory_template.yml
@@ -10,12 +10,12 @@
       strippingWindowPos: 0,3
       dependsOn: pants
       displayName: Ring
-    - name: neck
-      slotTexture: neck
-      slotFlags: NECK
+    - name: mask
+      slotTexture: mask
+      slotFlags: MASK
       uiWindowPos: 0,2
       strippingWindowPos: 1,2
-      displayName: Neck
+      displayName: Mask
     - name: eyes
       slotTexture: eyes
       slotFlags: EYES
@@ -66,12 +66,6 @@
       uiWindowPos: 2,2
       strippingWindowPos: 2,2
       displayName: Cloak
-    - name: mask
-      slotTexture: mask
-      slotFlags: MASK
-      uiWindowPos: 2,3
-      strippingWindowPos: 2,1
-      displayName: Mask
     # Main hotbar
     - name: belt1
       slotTexture: belt
@@ -97,6 +91,14 @@
       uiWindowPos: 0,0
       strippingWindowPos: 0,5
       displayName: Back
+    - name: neck
+      slotTexture: neck
+      slotFlags: NECK
+      slotGroup: SecondHotbar
+      uiWindowPos: 0,0
+      strippingWindowPos: 1,2
+      displayName: Neck
+      dependsOn: shirt
     # Right hand
     # Left hand
     - name: pocket1
