--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -124,6 +124,9 @@ CP14FlowersYellow: CP14Dayflin
 CP14OldLantern: CP14CrystalLampBlueEmpty
 CP14ClothingRingIceFloor: CP14ClothingRingManaGift
 
+#2024-11-05
+CP14ClothingRingCureWounds: CP14MagicHealingStaff
+
 # <---> CrystallPunk migration zone end
 
 
