--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
@@ -33,8 +33,14 @@
     wideAnimation: CP14WeaponArcSlash
     damage:
       types:
-        Blunt: 3
+        Blunt: 2
     soundHit:
       collection: MetalThud
     cPAnimationLength: 0.3
     cPAnimationOffset: -1.3
+  - type: CP14SpellStorageRequireAttune
+  - type: CP14MagicAttuningItem
+  - type: CP14SpellStorageAccessHolding
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellCureWounds
