--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/shadow_step.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/shadow_step.yml
@@ -3,6 +3,8 @@
   name: Shadow step
   description: A step through the gash of reality that allows you to cover a small of distance quickly
   components:
+  - type: CP14MagicEffectCastSlowdown
+    speedMultiplier: -0.4
   - type: CP14MagicEffect
     manaCost: 20
     telegraphyEffects:
