--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
@@ -12,9 +12,9 @@
       NavSmash: !type:Bool
         true
       VisionRadius: !type:Single
-        10
+        16
       AggroVisionRadius: !type:Single
-        8
+        12
   - type: NpcFactionMember
     factions:
     - CP14Monster
@@ -47,10 +47,10 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      80: Dead
+      60: Dead
   - type: SlowOnDamage
     speedModifierThresholds:
-      70: 0.8
+      40: 0.8
   - type: Stamina
     critThreshold: 200
   - type: CombatMode
@@ -59,9 +59,8 @@
     animation: WeaponArcBite
     damage:
       types:
-        Slash: 2
-        Blunt: 4
-        Piercing: 4
+        Slash: 3
+        Piercing: 3
         Structural: 3
   - type: MovementSpeedModifier
     baseWalkSpeed: 4
@@ -82,6 +81,7 @@
   - type: Grammar
     attributes:
       gender: epicene
+  - type: CP14MagicCasterSlowdown
   - type: CP14MagicEnergyContainer
     magicAlert: CP14MagicEnergy
     maxEnergy: 100
@@ -100,6 +100,8 @@
   name: Subterranean leap
   description: Make a subterranean leap, quickly approaching the victim.
   components:
+  - type: CP14MagicEffectCastSlowdown
+    speedMultiplier: -1.0
   - type: CP14MagicEffect
     manaCost: 5
     telegraphyEffects:
@@ -108,15 +110,19 @@
       - CP14ImpactEffectDigging
     effects:
     - !type:CP14SpellCasterTeleport
+      needVision: false
+    - !type:CP14SpellSpawnEntityOnTarget
+      spawns:
+      - CP14ImpactEffectDigging
   - type: CP14MagicEffectCastingVisual
     proto: CP14ImpactEffectDigging
   - type: EntityWorldTargetAction
-    useDelay: 5
+    useDelay: 8
     range: 10
     checkCanAccess: false
     itemIconStyle: BigAction
     sound: !type:SoundPathSpecifier
-      path: /Audio/Magic/rumble.ogg
+      path: /Audio/Effects/gib3.ogg
     icon:
       sprite: _CP14/Effects/Magic/spells_icons_monster.rsi
       state: subterranean_leap
