--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
@@ -74,7 +74,7 @@
         - id: CP14ClothingRingIceShards
         - id: CP14ClothingRingFlameCreation
         - id: CP14ClothingRingFireball
-        - id: CP14ClothingRingCureWounds
+        - id: CP14MagicHealingStaff
         - id: CP14ClothingRingShadowStep
         - id: CP14ClothingRingShadowGrab
         - id: CP14ClothingRingEarthWall
