--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/cure_wounds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/cure_wounds.yml
@@ -3,6 +3,8 @@
   name: Cure wounds
   description: You touch the creature, healing its body from physical damage
   components:
+  - type: CP14MagicEffectCastSlowdown
+    speedMultiplier: -0.5
   - type: CP14MagicEffect
     manaCost: 20
     telegraphyEffects:
@@ -34,7 +36,6 @@
   - type: CP14MagicEffectVerbalAspect
     startSpeech: "Et curabuntur..."
     endSpeech: "vulnera tua"
-  - type: CP14MagicEffectSomaticAspect
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneCureWounds
   - type: EntityWorldTargetAction
@@ -42,6 +43,7 @@
       components:
       - MobState
     useDelay: 10
+    range: 7
     itemIconStyle: BigAction
     interactOnMiss: false
     sound: !type:SoundPathSpecifier
@@ -50,8 +52,9 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: cure_wounds
     event: !type:CP14DelayedEntityWorldTargetActionEvent
-      delay: 2
-
+      delay: 3
+      breakOnMove: false
+ 
 - type: entity
   id: CP14RuneCureWounds
   parent: CP14BaseMagicRune
