--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/shadow_step.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/shadow_step.yml
@@ -6,6 +6,7 @@
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: -0.4
   - type: CP14MagicEffect
+    magicType: Conjuration
     manaCost: 20
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
