--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/earth_wall.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/earth_wall.yml
@@ -6,6 +6,7 @@
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: -0.9
   - type: CP14MagicEffect
+    magicType: Evocation
     manaCost: 15
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
