--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/fireball.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/fireball.yml
@@ -6,6 +6,7 @@
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: -0.7
   - type: CP14MagicEffect
+    magicType: Evocation
     manaCost: 20
     effects:
     - !type:CP14SpellSpawnEntityOnUser
