--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_dagger.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_dagger.yml
@@ -4,6 +4,7 @@
   description: Materialization of a temporary sharp ice throwing dagger
   components:
   - type: CP14MagicEffect
+    magicType: Evocation
     manaCost: 15
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
