--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_shards.yml
@@ -6,6 +6,7 @@
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: -0.25
   - type: CP14MagicEffect
+    magicType: Evocation
     manaCost: 5
     effects:
     - !type:CP14SpellProjectile
