--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/sphere_of_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/sphere_of_light.yml
@@ -4,6 +4,7 @@
   description: Materialization of a bright and safe light source.
   components:
   - type: CP14MagicEffect
+    magicType: Conjuration
     manaCost: 10
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
