--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
@@ -103,6 +103,7 @@
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: -1.0
   - type: CP14MagicEffect
+    magicType: Conjuration
     manaCost: 5
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
