manacost calculation event

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_dagger.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_dagger.yml
@@ -90,6 +90,6 @@
       behaviors:
       - !type:PlaySoundBehavior
         sound:
-          collection: MetalBreak
+          collection: GlassBreak
       - !type:DoActsBehavior
         acts: ["Destruction"]
