manacost ffect clothing

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/mana_gift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/mana_gift.yml
@@ -6,6 +6,7 @@
   - type: CP14MagicEffect
     magicType: Necromancy
     manaCost: 12
+    canModifyManacost: false
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
