--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/flash_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/flash_light.yml
@@ -4,7 +4,7 @@
   description: Creates a flash of bright, blinding light.
   components:
   - type: CP14MagicEffect
-    magicType: Conjuration
+    magicType: Abjuration
     manaCost: 10
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
