Magic types, magic clothing (#539)
* magic types + auto magic spell description

* manacost calculation event

* manacost ffect clothing

* Update orbs.yml

* magic type not required

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_dagger.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/ice_dagger.yml
@@ -4,6 +4,7 @@
   description: Materialization of a temporary sharp ice throwing dagger
   components:
   - type: CP14MagicEffect
+    magicType: Evocation
     manaCost: 15
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
@@ -89,6 +90,6 @@
       behaviors:
       - !type:PlaySoundBehavior
         sound:
-          collection: MetalBreak
+          collection: GlassBreak
       - !type:DoActsBehavior
         acts: ["Destruction"]
