--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/cure_wounds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/cure_wounds.yml
@@ -6,7 +6,7 @@
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: -0.5
   - type: CP14MagicEffect
-    magicType: Evocation
+    magicType: Healing
     manaCost: 20
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
