--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/shadow_grab.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/shadow_grab.yml
@@ -4,7 +4,7 @@
   description: You attract a ghostly hand that draws an object or entity to you
   components:
   - type: CP14MagicEffect
-    magicType: Transmutation
+    magicType: Movement
     manaCost: 10
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
