--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
@@ -44,3 +44,6 @@
   - type: CP14SpellStorage
     spells:
     - CP14ActionSpellCureWounds
+  - type: CP14MagicManacostModify
+    modifiers:
+     Healing: 1.1
