--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
@@ -4,7 +4,7 @@
   description: You can transfer a small amount of your magical energy to a target entity or magical object.
   components:
   - type: CP14MagicEffect
-    magicType: Necromancy
+    magicType: Meta
     manaCost: 12
     canModifyManacost: false
     telegraphyEffects:
