--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -6,7 +6,7 @@
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: -0.25
   - type: CP14MagicEffect
-    magicType: Evocation
+    magicType: Water
     manaCost: 5
     effects:
     - !type:CP14SpellProjectile
