--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T1_cure_wounds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T1_cure_wounds.yml
@@ -53,7 +53,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: cure_wounds
     event: !type:CP14DelayedEntityWorldTargetActionEvent
-      delay: 3
+      castDelay: 3
       breakOnMove: false
  
 - type: entity
