--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
@@ -40,7 +40,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: mana_gift
     event: !type:CP14DelayedEntityWorldTargetActionEvent
-      delay: 2
+      castDelay: 2
 
 - type: entity
   id: CP14RuneManaGift
