--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Movement/T1_shadow_grab.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Movement/T1_shadow_grab.yml
@@ -32,7 +32,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: shadow_grab
     event: !type:CP14DelayedEntityWorldTargetActionEvent
-      delay: 2
+      castDelay: 2
       hidden: true
       entityDistance: 1000
 
