--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_dagger.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_dagger.yml
@@ -25,7 +25,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: ice_dagger
     event: !type:CP14DelayedInstantActionEvent
-      delay: 0.5
+      castDelay: 0.5
       breakOnMove: false
 
 - type: entity
