--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -29,7 +29,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: ice_shards
     event: !type:CP14DelayedEntityWorldTargetActionEvent
-      delay: 0.5
+      castDelay: 0.5
       breakOnMove: false
       entityDistance: 1000
 
