--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T1_sphere_of_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T1_sphere_of_light.yml
@@ -20,7 +20,6 @@
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneSphereOfLight
   - type: InstantAction
-    useDelay: 15
     itemIconStyle: BigAction
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/rumble.ogg
@@ -28,6 +27,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: sphere_of_light
     event: !type:CP14DelayedInstantActionEvent
+      cooldown: 15
       delay: 0.5
       breakOnMove: false
 
