--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -17,7 +17,6 @@
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneIceShards
   - type: EntityWorldTargetAction
-    useDelay: 0.5
     repeat: true
     checkCanAccess: false
     raiseOnUser: true
@@ -29,6 +28,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: ice_shards
     event: !type:CP14DelayedEntityWorldTargetActionEvent
+      cooldown: 0.5
       castDelay: 0.5
       breakOnMove: false
       entityDistance: 1000
