--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
@@ -31,7 +31,6 @@
       components:
       - CP14MagicEnergyContainer
       - CP14MagicEnergyCrystalSlot
-    useDelay: 5
     itemIconStyle: BigAction
     interactOnMiss: false
     sound: !type:SoundPathSpecifier
@@ -40,6 +39,7 @@
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: mana_gift
     event: !type:CP14DelayedEntityWorldTargetActionEvent
+      cooldown: 5
       castDelay: 2
 
 - type: entity
