--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Movement/T1_shadow_grab.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Movement/T1_shadow_grab.yml
@@ -21,6 +21,9 @@
       - CP14ImpactEffectShadowStep
   - type: CP14MagicEffectSomaticAspect
   - type: EntityWorldTargetAction
+    whitelist:
+      components:
+      - Item
     canTargetSelf: false
     checkCanAccess: false
     range: 10
@@ -32,8 +35,7 @@
       state: shadow_grab
     event: !type:CP14DelayedEntityWorldTargetActionEvent
       cooldown: 10
-      castDelay: 2
-      hidden: true
+      castDelay: 0
       entityDistance: 1000
 
 - type: entity
